Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rj-site01-service
spec:
  selector:
    app: rj-site01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
