Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rj-site01-ingress
spec:
  rules:
  - host: maravillas.cloud
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: rj-site01-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080
